# rinnovo-re

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  mkdocs.yml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml
conda/rinnovo-daemon/: bld.bat  build.sh  meta.yaml
crates/bindings/rnb_py/: Cargo.toml
crates/rnb_build/: Cargo.toml
crates/rnb_engine/: Cargo.toml
crates/rnb_py/: Cargo.toml  pyproject.toml
crates/rnb_store/: Cargo.toml
crates/runtime/rnb_engine_http/: Cargo.toml
crates/runtime/rnb_engine_http/src/: main.rs
docker/: daemon.Dockerfile
docs/: architecture.md  index.md  kernels.md  roommate_quickstart.md
docs/latex/raw/: main.tex
docs/spec/: rnb_format_v0_1.md
python/: __init__.py
python/registrar/: DATA_MODEL.md  __init__.py  app.py
python/tests/: test_bindings.py  test_bio_view.py  test_registrar.py  test_registrar_remote.py  test_sdk_artifact.py  test_sdk_registrar_client.py  test_web_frontend.py
rinnovo_sdk/: README.md  __init__.py  artifact.py  bio.py  cli.py  config.py  pyproject.toml  registrar_client.py
scripts/: run_demo_engine.ps1  test.ps1
tests/: rnb_attribute_table.rs  rnb_engine_attributes_relations.rs  rnb_engine_bio.rs  rnb_engine_kernels.rs  rnb_format_roundtrip.rs  rnb_manifest.rs  rnb_numeric_matrix.rs  rnb_object_table.rs  rnb_relation_table.rs  rnb_rnbfile_optional_segments.rs  segment_enums.rs  string_dictionary.rs
web/: index.html
web/favicon_io/: about.txt
web/pages/: alphafold.html  console.html  install.html  landing.html
(+26 files in other folders)
