[workspace]
resolver = "2"

members = [
  "crates/kernel/rnb_format",
  "crates/kernel/rnb_store",
  "crates/kernel/rnb_index",
  "crates/runtime/rnb_engine",
  "crates/runtime/rnb_engine_http",
  "crates/tools/rnb_build",
  "crates/bindings/rnb_py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
