[tool.poetry]
name = "rinnovo-sdk"
version = "0.1.0"
description = "High-level Python SDK for the Rinnovo Representation Engine: A virtualized substrate for biological data objects"
authors = ["Davide Rossotto <drossotto@crimson.ua.edu>"]
readme = "README.md"
packages = [{ include = "rinnovo_sdk", from = ".." }]

[tool.poetry.dependencies]
python = "^3.11"
rinnovo = { path = "../crates/bindings", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
