[package]
name = "rnb_engine_http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rnb_engine = { path = "../rnb_engine" }

[dev-dependencies]
rnb_format = { path = "../../kernel/rnb_format" }
tower = "0.5"
urlencoding = "2.1"
